--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,20 @@
-$body-bg: #ecf0f1;
-$navbar-default-bg: #34495e;
-$navbar-default-link-color: #3498db;
-$jumbotron-bg: #bdc3c7;
+
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:                                                   #ecf0f1;
+$font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:                                        45px;
+$navbar-default-bg:                          #34495e;
+$navbar-default-brand-color:      #3498db;
+$brand-primary:                                    #3498db;
+$jumbotron-bg:                                         #bdc3c7;
+
 @import 'bootstrap';
+
+.center {
+     text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
+}
